[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.12"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.108"
axum = { version = "0.7.3", features = ["form", "multipart"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
tower = { version = "0.4.13", features = ["util"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "macros",
] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
argon2 = "0.5.3"
dotenv = "0.15.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
reqwest = { version = "0.11.18", features = ["json"] }
mime_guess = "2.0.5"
cron = "0.13.0"
image = "0.25.5"
lettre = "0.11.11"
enumflags2 = "0.7.11"
gem-rs = "0.1.80"
